<resources>
    <string name="app_name">Juego de preguntas</string>
    <string name="begin_game">Comenzar</string>
    <string name="puntuation">Puntuacion</string>
    <string name="title_game">JUEGO DE PREGUNTAS RANDOM</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="saveButton">Guardar cambios</string>
    <string name="bckc_setting">Elija el color de fondo</string>
    <string name="register_nametag">Introduzca su nombre de usuario</string>
    <string name="register_name">Introduzca su nombre</string>
    <string name="register_password">Introduzca su contraseña</string>

    <string name="login_nametag">Introduzca su usuario</string>
    <string name="login_password">Introduzca su contraseña</string>

    <string name="btn_ranking">Ranking</string>

    <string name="music_txt">Activacion de Musica</string>


    <string-array name="colours">
        <item>Blanco</item>
        <item>Rojo</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Negro</item>
    </string-array>
</resources>
